k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-svc
  namespace: default
spec:
  selector:
    app: hello-api
  type: ClusterIP
  ports:
  - port: 8000 # 暴露端口
    targetPort: 8080 # 目標 POD 上的 Port
